[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/PlayerRocket/PlayerRocket.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=7]
radius = 0.4

[sub_resource type="SphereMesh" id=8]
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereShape" id=9]
radius = 0.5

[sub_resource type="SphereShape" id=10]
radius = 6.0

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
scale_curve = SubResource( 15 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="QuadMesh" id=13]
material = SubResource( 12 )
size = Vector2( 0.3, 0.3 )

[node name="PlayerRocket" type="RigidBody"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0 )
shape = SubResource( 9 )

[node name="BlastRadius" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="BlastRadius"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0 )
shape = SubResource( 10 )

[node name="Particles" type="Particles" parent="."]
emitting = false
lifetime = 0.5
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 13 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="BlastRadius" to="." method="_on_BlastRadius_body_entered"]
[connection signal="body_exited" from="BlastRadius" to="." method="_on_BlastRadius_body_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
